# LBM_Project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  analysis.py  docker-compose.yml  dockerfile  example  main.cpp  nb.ipynb  palabos_test.cpp  script.sh  symbolic_calculations.ipynb
include/: ComputeLaplacian.h  ComputeNormGradient.h  DynamicsMomentum.h  custom_dynamics.h  diffusion_d2q5.h  droplet1.h  lattice_coupling.h  lattice_initilization.h  obstacle.h  phi.h
md files/: file1.md  file2.md  file3.md
src/: custom_dynamics.cpp  diffusion_d2q5.cpp  droplet1.cpp  obstacle.cpp
temporary_files/: BKGoperators.cpp  BKGoperators.h
